fixes FE-106: table overflow issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -464,7 +464,6 @@ input {
 }
 
 .visuallyhidden {
-  position: absolute;
   z-index: -1;
   width: 1px;
   height: 1px;
